# ginger

./: .gitignore  .travis.yml  AUTHORS  AUTHORS.txt  BUGS  CONTRIBUTORS.txt  Dockerfile  INSTALL  INSTALL.txt  JumpStart.makefile  MakeTarball  Makefile  Makefile.in  NEWS  README  README.rst  README.txt  THANKS  appginger.spec  boost.m4  config.def.h  config.h.in  config.mk  configure  configure.ac  configure.in  overview.odt
apps/: .gitignore  Makefile  Makefile.in
apps/CppUnitLite2/: .gitignore  LICENSE.txt  makefile  test
apps/appginger/: Doxyfile  Makefile.in  design
apps/attic/: cgi.cpp  chain.cpp  chain.hpp  cord.cpp  cord.hpp  hash.cpp  hash.hpp  implementation.hpp  item.cpp  item.hpp  item_factory.cpp  item_factory.hpp  item_map.cpp  item_map.hpp  machine_private.hpp  plant_private.hpp  pool.cpp  pool.hpp  poolstore.hpp  print.cpp  print.hpp  printfn.cpp  read_expr.cpp  read_expr.hpp  role.hpp  rope.cpp  rope.hpp  scancallstack.cpp  scancallstack.hpp  special.c  term-old.cpp
apps/automatic/: Makefile.in  simple.py
apps/common2gnx/: Makefile  design
apps/fetchgnx/: Doxyfile  Makefile.in  design
apps/file2gnx/: Makefile.in  design
apps/fn2code/: Makefile.in
apps/ginger/: Makefile.in
apps/ginger-admin/: Makefile.in  design
apps/ginger-help/: Makefile.in
apps/gvmtest/: Doxyfile  Makefile.in  design
apps/libgng/: Doxyfile  Makefile.in
apps/libmetainfo/: Makefile.in
apps/lisp2gnx/: Makefile.in
apps/shebang/: Makefile.in
apps/simplifygnx/: Makefile.in  design
apps/snapshots/: appmetro.04jun10.tgz  appmetro.05jun10.tgz  appmetro.20jun10.tgz  appmetro.working.19jun10.tgz  code.30may10.tgz  code_and_headers.30may10.tgz  metro_syntax.13jun10.tgz  working-appmetro.04jun10.tgz  xfr.tgz
apps/tidygnx/: Makefile.in
apps/xson2gnx/: Makefile.in  cpp.tgz
autodocs/: Makefile  Makefile.in  make_instrsetdocs.py
build_template/: INSTALL_FROM_TARBALL.txt  install.sh
c/: Makefile  Makefile.in
c/appginger/: Doxyfile  Makefile  Makefile.in  appginger.cpp  cage.cpp  destination.cpp  functor.cpp  ident.cpp  initialize.cpp  instruction_set.cpp  instruction_set1.cpp  lift.cpp  machine.cpp  machine1.cpp  machine3.cpp  mishap.cpp  plant.cpp  print.cpp  rcep.cpp  read_xml.cpp  sys.cpp  term.cpp  vmi.cpp
c/automatic/: instruction.hpp.auto  instruction_set.cpp.auto  instruction_set.hpp.auto  instruction_set1.cpp.auto  instruction_set2.cpp.auto  machine3.cpp.auto
c/common2gnx/: Makefile.in  common2gnx.cpp  dontknow.hpp  functor.cpp  item.cpp  item_factory.hpp  mishap.cpp  mishap.hpp  node.cpp  node.hpp  read_expr.cpp  read_expr.hpp
c/headers/: appginger.hpp  arity.hpp  cage.hpp  cgi.hpp  common.hpp  dict.hpp  dontknow.hpp  functor.hpp  ident.hpp  instruction_set.hpp  key.hpp  lift.hpp  machine.hpp  machine1.hpp  machine2.hpp  machine3.hpp  plant.hpp  rcep.hpp  read_xml.hpp  special.hpp  sys.hpp  term.hpp  vmi.hpp
c/lisp2gnx/: lisp2gnx.lsp
debian/: control  copyright  rules
design/: Makefile  backgrounder.md  bootstrap.sh  build_process.odt  case_study_add_gnx_element.odt  case_study_new_engine.odt  case_study_sysgetenv.odt  cf_syntaxes.ods  classes.txt  code_planting.rst  codebuilder.txt  compiling_queries.rst  conf.py  dependency_injection.rst  design_rationale_for_name_spaces.graffle  engine_macros.ods  envvars.rst  exception_types.rst  exceptions.txt  featuretoggles.rst  file_hierarchy.txt  fn2code.rst  garbage_collection.rst  get_contributing.txt  ginger_aspirations.odt  ginger_loops.odt  ginger_xml_syntax.odt  guidelines.txt  how_to_add_sysclass.rst  index.rst  inventory.ivy  inventory.rst  issues_with_queries.rst  lisp_syntax.odt  maths.rst  old-status-update.odt  on1page.md  patterns-and-queries.html  pythonic_syntax.txt  roadmap.rst  (+7 more)
design/appginger/: c++_namespaces.rst  executables.rst  gc.rst  how_to_add_a_new_instruction.rst  index.rst  iterators.rst  machine_layout.ods  nfib_test_results.rst  notes.md  object_layout.ods  recordclasses.rst
design/attic/: ginger_xml_syntax.odt
design/common2gnx/: arrows-in-common.rst  break-mode.rst  cstyle.rst  dhat.rst  dsemi.rst  how_to_add_iterator.rst  how_to_add_keywords.rst  how_to_add_prefix_form.rst  index.rst
design/fetchgnx/: fetchgnx.rst  index.rst
design/file2gnx/: index.rst  notes.rst
devtools/: get-started-ubuntu.bsh
docker-scripts/: build-ginger  install-rudecgi
documentation/: Makefile  appginger.txt  common_syntax.txt  ginger_overview.odt  gnx_syntax.txt  gson.txt  gson2gnx.txt  gson_background.txt  lnx2mnx.txt  mnx_syntax.txt  overview.txt  packages.odt  patterns_and_queries.txt  toolchain.txt  welcome.txt
examples/: fact.am  fact.cmn  hello.am  hello.cmn  nfib.cmn  test.am  test.lsp
functests/: test_appginger.py  test_cmn2gnx.py  test_common2gnx.py  test_cstyle2gnx.py  test_gnxeval.py  test_lisp2gnx.py  test_simplifygnx.py
instruction_set/: .gitignore  InstructionSetDB.makefile  Makefile  README.md  README.rst  _decr.i  _force.pending  absand.ir  absor.ir  add.i  and.ir  bypass.ir  calls.i  chainlite.icr  check_count.ir  check_mark.irr  check_mark0.ir  check_mark1.ir  check_mark_gte.irr  conf.py  decr.i  decr_local_by1.ir  div.i  dup.i  end1_calls.ir  end_call_global.irv  end_mark.ir  enter.i  enter0.i  enter1.i  eq.i  eq_si.ircr  eq_si.irrr  eq_ss.irrr  erase.i  erase_mark.ir  erase_num.ir  escape.i  fail.i  field.ir  (+83 more)
instructions/: _add.i  _decr.i  _eq.i  _force.pending  _gt.i  _incr.i  _incr_by.ir  _lt.i  _lte.i  _mul.i  _print.i  _putchar.i  calls.i  check0.ir  check1.ir  end.ir  end1_calls.ir  end_call_global.irv  enter.i  enter0.i  enter1.i  eq_si.irrr  eq_ss.irrr  gt_si.irrr  gt_ss.irrr  gte_si.irrr  gte_ss.irrr  ifnot.ir  ifso.ir  lt_si.irrr  lt_ss.irrr  lte_si.irrr  lte_ss.irrr  neq_si.irrr  neq_ss.irrr  not.i  pop_global.iv  pop_local.ir  push_global.iv  push_local.ir  (+8 more)
projects/: .gitignore  Makefile.in  make_standard_library.py  simplify_all_gnx_files.sh
snapcraft/: snapcraft.yaml
systests/: test_scripts.py
tests/: test_cmn2gnx_01.py  test_gnx2ginger.py
vagrant/: Vagrantfile.precise32  Vagrantfile.precise64  source-bootstrap.sh  tarball-bootstrap.sh
(+1739 files in other folders)
