#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
AC_INIT(FULL-PACKAGE-NAME, VERSION, BUG-REPORT-ADDRESS)
AC_CONFIG_SRCDIR([config.def.h])
AC_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_CPP
AC_PROG_MAKE_SET

# Checks for libraries.

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([stdlib.h string.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_C_INLINE
AC_TYPE_SIZE_T
AC_C_VOLATILE
AC_CHECK_TYPES([ptrdiff_t])

# Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_MEMCMP
AC_FUNC_VPRINTF
AC_CHECK_FUNCS([strchr strstr strtoul])

# Allow Boost to be somewhere that requires compile and/or link options.
BOOST_CPPFLAGS=""
BOOST_LDFLAGS=""
AC_ARG_WITH([boost],
 AS_HELP_STRING([--with-boost@<:@=DIR@:>@],
 [root directory of Boost installation]),
 [
 boost_root="${withval}"
 if test "${boost_root}" != yes; then
 boost_include="${boost_root}/include"
 boost_libdir="${boost_root}/lib"
 echo "BOOST FOUND"
 fi
 ])

AC_ARG_WITH([boost-include],
 AS_HELP_STRING([--with-boost-include=DIR],
 [specify exact directory for Boost headers]),
 [boost_include="$withval"])

AC_ARG_WITH([boost-libdir],
 AS_HELP_STRING([--with-boost-libdir=DIR],
 [specify exact directory for Boost libraries]),
 [boost_libdir="$withval"])

if test "${boost_include}"; then
 BOOST_CPPFLAGS="-I${boost_include}"
 echo "BOOST_CPPFLAGS set"
fi

if test "${boost_libdir}"; then
 BOOST_LDFLAGS="-L${boost_libdir}"
 echo "BOOST_LDDFLAGS set"
fi

AC_CONFIG_FILES([Makefile
                 c/Makefile
                 c/appginger/Makefile
                 c/appginger/cpp/Makefile
                 c/appginger/functests/Makefile
                 c/common2gnx/Makefile
                 c/common2gnx/cpp/Makefile])
AC_OUTPUT
